--- a/index.html
+++ b/index.html
@@ -108,13 +108,42 @@
             </a>
 
             <!-- Mobile Menu Button (Hamburger) -->
-            <button class="md:hidden text-liyon-gold focus:outline-none">
+            <button id="mobile-menu-button" class="md:hidden text-liyon-gold focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
                     </path>
                 </svg>
             </button>
         </div>
+
+        <!-- Mobile Menu (Hidden by default) -->
+        <div id="mobile-menu" class="hidden md:hidden glass-nav absolute top-full left-0 w-full border-b border-liyon-gold/20 shadow-xl">
+            <div class="px-6 py-4 flex flex-col space-y-4 text-center">
+                <a href="#about" class="text-gray-300 hover:text-liyon-gold transition-colors py-2 block">關於我們</a>
+                <a href="#solutions" class="text-gray-300 hover:text-liyon-gold transition-colors py-2 block">解決方案</a>
+                <a href="#case-study" class="text-gray-300 hover:text-liyon-gold transition-colors py-2 block">成功案例</a>
+                <a href="#contact" class="px-5 py-2 border border-liyon-gold text-liyon-gold text-sm font-semibold rounded hover:bg-liyon-gold hover:text-liyon-navy transition-all duration-300 inline-block">
+                    預約 ROI 診斷
+                </a>
+            </div>
+        </div>
+
+        <script>
+            // Mobile Menu Toggle
+            const btn = document.getElementById('mobile-menu-button');
+            const menu = document.getElementById('mobile-menu');
+
+            btn.addEventListener('click', () => {
+                menu.classList.toggle('hidden');
+            });
+            
+            // Close menu when clicking a link
+            menu.querySelectorAll('a').forEach(link => {
+                link.addEventListener('click', () => {
+                    menu.classList.add('hidden');
+                });
+            });
+        </script>
     </nav>
 
     <!-- 1. Hero Section -->
