--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@
         </div>
 
         <!-- Mobile Menu (Hidden by default) -->
-        <div id="mobile-menu" class="hidden md:hidden glass-nav absolute top-full left-0 w-full border-b border-liyon-gold/20 shadow-xl">
+        <div id="mobile-menu"
+            class="hidden md:hidden glass-nav absolute top-full left-0 w-full border-b border-liyon-gold/20 shadow-xl">
             <div class="px-6 py-4 flex flex-col space-y-4 text-center">
                 <a href="#about" class="text-gray-300 hover:text-liyon-gold transition-colors py-2 block">關於我們</a>
                 <a href="#solutions" class="text-gray-300 hover:text-liyon-gold transition-colors py-2 block">解決方案</a>
                 <a href="#case-study" class="text-gray-300 hover:text-liyon-gold transition-colors py-2 block">成功案例</a>
-                <a href="#contact" class="px-5 py-2 border border-liyon-gold text-liyon-gold text-sm font-semibold rounded hover:bg-liyon-gold hover:text-liyon-navy transition-all duration-300 inline-block">
+                <a href="#contact"
+                    class="px-5 py-2 border border-liyon-gold text-liyon-gold text-sm font-semibold rounded hover:bg-liyon-gold hover:text-liyon-navy transition-all duration-300 inline-block">
                     預約 ROI 診斷
                 </a>
             </div>
@@ -136,7 +138,7 @@
             btn.addEventListener('click', () => {
                 menu.classList.toggle('hidden');
             });
-            
+
             // Close menu when clicking a link
             menu.querySelectorAll('a').forEach(link => {
                 link.addEventListener('click', () => {
@@ -455,7 +457,7 @@
 
     <!-- 6. Footer -->
     <footer class="bg-black py-10 border-t border-gray-900 text-center md:text-left">
-        <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-start gap-8">
+        <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center md:items-start gap-8">
             <div class="md:w-1/3">
                 <h4 class="text-white font-bold text-lg">LIYON <span class="text-liyon-gold">Global</span></h4>
                 <p class="text-gray-400 text-sm mt-2">LIYON Global Enterprise Co., Ltd.<br>立盈國際興業股份有限公司</p>
