--- a/index.html
+++ b/index.html
@@ -477,9 +477,8 @@
                 <h5 class="text-white font-bold mb-3">Location</h5>
                 <p class="text-gray-400 text-sm">
                     <strong>Address:</strong><br>
-                    330 桃園市桃園區經國路11號15樓之1<br>
-                    <span class="text-xs text-gray-500 mt-1 block">15F.-1, No. 11, Jingguo Rd., Taoyuan Dist., Taoyuan
-                        City 330, Taiwan (R.O.C.)</span>
+                    15F.-1, No. 11, Jingguo Rd., Taoyuan Dist., Taoyuan City 330, Taiwan (R.O.C.)<br>
+                    <span class="text-xs text-gray-500 mt-1 block">330 桃園市桃園區經國路11號15樓之1</span>
                 </p>
             </div>
         </div>
