--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>立盈國際 LIYON Global | AI Automation Agency</title>
     <meta name="description" content="不賣工時，只賣結果。LIYON 協助企業利用 AI 語音智能體、RAG 知識庫與 n8n 自動化工作流，建立高利潤商業護城河。">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
     <!-- 引入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
