--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </section>
 
     <!-- 2. Brand Manifesto (About) -->
-    <section id="about" class="py-16 md:py-24 bg-liyon-dark relative">
+    <section id="about" class="py-16 md:py-24 bg-gradient-to-b from-liyon-navy to-liyon-dark relative">
         <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-16 items-center">
 
             <!-- Left Visual: Code Waterfall Abstract -->
