--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-TW" class="scroll-smooth">
+<html lang="zh-TW" class="scroll-smooth scroll-pt-28 md:scroll-pt-36">
 
 <head>
     <meta charset="UTF-8">
@@ -150,7 +150,7 @@
     </nav>
 
     <!-- 1. Hero Section -->
-    <section class="relative min-h-screen flex items-center justify-center pt-20 pb-20 overflow-hidden bg-grid">
+    <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden bg-grid">
         <!-- 背景光暈 -->
         <div
             class="absolute top-1/4 left-1/4 w-[500px] h-[500px] bg-liyon-gold/10 rounded-full blur-[100px] animate-pulse-slow">
@@ -174,7 +174,8 @@
                 <span class="block text-3xl md:text-5xl mt-4 text-white">不賣工時，只賣結果。</span>
             </h1>
 
-            <p class="text-gray-300 text-lg md:text-xl mb-12 max-w-2xl mx-auto font-light leading-relaxed">
+            <p
+                class="text-gray-300 text-lg md:text-xl mb-12 max-w-2xl mx-auto font-light leading-relaxed md:leading-relaxed px-4">
                 我們協助前 10% 的企業與創作者，利用 <span class="text-white font-medium">AI 語音智能體 (Voice Agents)</span>、<span
                     class="text-white font-medium">RAG 企業大腦</span> 與 <span class="text-white font-medium">n8n
                     自動化工作流</span>，建立利潤率 90% 以上、與時間脫鉤的商業護城河。
