--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                     <!-- OpenAI -->
                     <img src="images/icons/openai.svg" alt="OpenAI"
                         class="h-8 md:h-10 w-auto hover:scale-110 transition-transform duration-300">
+                    <!-- Google -->
+                    <img src="images/icons/google.svg" alt="Google"
+                        class="h-8 md:h-10 w-auto hover:scale-110 transition-transform duration-300">
                     <!-- Gemini -->
                     <img src="images/icons/googlegemini.svg" alt="Gemini"
                         class="h-8 md:h-10 w-auto hover:scale-110 transition-transform duration-300">
