--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
     </section>
 
     <!-- 2. Brand Manifesto (About) -->
-    <section id="about"
-        class="py-16 md:py-24 bg-gradient-to-b from-liyon-navy to-liyon-dark relative scroll-mt-24 md:scroll-mt-28">
+    <section id="about" class="py-20 md:py-24 bg-gradient-to-b from-liyon-navy to-liyon-dark relative">
         <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-16 items-center">
 
             <!-- Left Visual: Code Waterfall Abstract -->
@@ -297,7 +296,7 @@
     </section>
 
     <!-- 3. Core Solutions -->
-    <section id="solutions" class="py-16 md:py-24 bg-liyon-navy relative overflow-hidden scroll-mt-24 md:scroll-mt-28">
+    <section id="solutions" class="py-20 md:py-24 bg-liyon-navy relative overflow-hidden">
         <!-- Background Decor -->
         <div class="absolute top-0 w-full h-px bg-gradient-to-r from-transparent via-liyon-gold/30 to-transparent">
         </div>
@@ -401,7 +400,7 @@
     </section>
 
     <!-- 4. Case Study -->
-    <section id="case-study" class="py-16 md:py-24 bg-gray-900 border-t border-gray-800 scroll-mt-24 md:scroll-mt-28">
+    <section id="case-study" class="py-20 md:py-24 bg-gray-900 border-t border-gray-800">
         <div class="max-w-7xl mx-auto px-6">
             <h2 class="text-3xl font-bold mb-12 text-center text-white">Client Success</h2>
 
@@ -462,7 +461,7 @@
     </section>
 
     <!-- 5. Grand Slam Offer (Footer CTA) -->
-    <section id="contact" class="py-20 bg-liyon-gold/10 relative overflow-hidden scroll-mt-24 md:scroll-mt-28">
+    <section id="contact" class="py-20 bg-liyon-gold/10 relative overflow-hidden">
         <div class="absolute inset-0 bg-liyon-navy/90 backdrop-blur-sm z-0"></div>
         <div class="max-w-4xl mx-auto px-6 text-center relative z-10">
             <h2 class="text-3xl md:text-5xl font-bold text-white mb-6">
