--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://liyoncso-theone.github.io/">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="立盈國際 LIYON Global | AI Automation Agency">
+    <meta name="twitter:description" content="不賣工時，只賣結果。LIYON 協助企業利用 AI 語音智能體、RAG 知識庫與 n8n 自動化工作流，建立高利潤商業護城河。">
+    <meta name="twitter:image" content="https://liyoncso-theone.github.io/images/og-image.png">
 
     <!-- 設定品牌色與字體 -->
     <script>
