--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </p>
 
             <div class="flex flex-col md:flex-row justify-center gap-5">
-                <a href="#contact"
+                <a href="https://calendar.app.google/GYbXq2mqY8cGqB3d7" target="_blank"
                     class="px-8 py-4 bg-liyon-gold text-liyon-navy font-bold rounded-2xl shadow-[0_0_20px_rgba(197,160,101,0.4)] hover:shadow-[0_0_40px_rgba(197,160,101,0.6)] hover:-translate-y-1 transition-all duration-300 text-lg">
                     👉 預約 15 分鐘 ROI 診斷
                 </a>
@@ -488,7 +488,7 @@
                     <li class="flex items-center"><span class="text-liyon-gold mr-3">★</span> <strong>90 天無效全額退款保證 (Risk
                             Reversal)</strong></li>
                 </ul>
-                <a href="mailto:liyon.global@gmail.com"
+                <a href="https://calendar.app.google/GYbXq2mqY8cGqB3d7" target="_blank"
                     class="inline-block w-full md:w-auto px-10 py-4 bg-liyon-gold text-liyon-navy font-bold rounded shadow-[0_0_30px_rgba(197,160,101,0.5)] hover:scale-105 transition-transform duration-300">
                     立刻預約規劃策略
                 </a>
