--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>立盈國際 LIYON Global | AI Automation Agency</title>
     <meta name="description" content="不賣工時，只賣結果。LIYON 協助企業利用 AI 語音智能體、RAG 知識庫與 n8n 自動化工作流，建立高利潤商業護城河。">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://liyoncso-theone.github.io/Liyon-Global/">
+    <meta property="og:title" content="LIYON Global | Decouple Time from Revenue">
+    <meta property="og:description" content="不賣工時，只賣結果。協助前 10% 企業建立 AI 自動化資產，每週節省 20+ 小時。">
+    <meta property="og:image" content="https://liyoncso-theone.github.io/Liyon-Global/images/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://liyoncso-theone.github.io/Liyon-Global/">
+    <meta property="twitter:title" content="LIYON Global | AI Automation Agency">
+    <meta property="twitter:description" content="Stop Renting Your Time. Build Your Engine.">
+    <meta property="twitter:image" content="https://liyoncso-theone.github.io/Liyon-Global/images/og-image.png">
+
     <link rel="icon" type="image/png" href="images/favicon.png">
 
     <!-- 引入 Tailwind CSS -->
@@ -466,7 +481,112 @@
         </div>
     </section>
 
-    <!-- 5. Grand Slam Offer (Footer CTA) -->
+    <!-- 5. How We Work (The 3D Process) -->
+    <section id="process" class="py-20 md:py-24 bg-liyon-navy relative overflow-hidden">
+        <!-- Background Decor -->
+        <div class="absolute top-0 w-full h-px bg-gradient-to-r from-transparent via-liyon-gold/20 to-transparent">
+        </div>
+
+        <div class="max-w-7xl mx-auto px-6 relative z-10">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">How We Work</h2>
+                <h3 class="text-xl text-liyon-gold mb-6">簡單三步，從混亂到自動化</h3>
+                <p class="text-gray-400 max-w-2xl mx-auto">
+                    我們不賣複雜的專案管理，我們賣「結果」。<br>
+                    透明、快速、且產權完全屬於您。
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-8 text-center">
+                <!-- Step 1: Discover -->
+                <div
+                    class="p-8 rounded-2xl bg-white/5 border border-white/10 hover:border-liyon-gold/50 transition-all duration-300 group">
+                    <div
+                        class="w-16 h-16 mx-auto bg-liyon-gold/10 rounded-full flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <span class="text-2xl font-bold text-liyon-gold">1</span>
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-3">Discover (診斷)</h4>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        我們深入拆解您的商業模式，找出那個「佔用 80% 時間、卻只帶來 20% 利潤」的瓶頸。
+                    </p>
+                </div>
+
+                <!-- Step 2: Develop -->
+                <div
+                    class="p-8 rounded-2xl bg-white/5 border border-white/10 hover:border-liyon-gold/50 transition-all duration-300 group">
+                    <div
+                        class="w-16 h-16 mx-auto bg-liyon-gold/10 rounded-full flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <span class="text-2xl font-bold text-liyon-gold">2</span>
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-3">Develop (建置)</h4>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        利用敏捷開發 (Agile)，在 2 週內構建出 MVP (最小可行性產品)。您不需要懂程式，只需要驗收結果。
+                    </p>
+                </div>
+
+                <!-- Step 3: Deploy -->
+                <div
+                    class="p-8 rounded-2xl bg-white/5 border border-white/10 hover:border-liyon-gold/50 transition-all duration-300 group">
+                    <div
+                        class="w-16 h-16 mx-auto bg-liyon-gold/10 rounded-full flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <span class="text-2xl font-bold text-liyon-gold">3</span>
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-3">Deploy (交付)</h4>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        系統上線，並進行完整移交。您擁有所有的代碼與流程產權，不再被供應商綁架 (Vendor Lock-in)。
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 6. FAQ (Objection Handling) -->
+    <section id="faq" class="py-20 md:py-24 bg-gray-900 border-t border-gray-800">
+        <div class="max-w-4xl mx-auto px-6">
+            <h2 class="text-3xl font-bold text-center text-white mb-12">常見問題 (FAQ)</h2>
+
+            <div class="space-y-6">
+                <!-- Q1 -->
+                <div class="bg-gray-800/50 rounded-xl p-6 border border-gray-700">
+                    <h4 class="text-white font-bold text-lg mb-2 flex items-center">
+                        <span class="text-liyon-gold mr-3">Q.</span>
+                        建置好的 AI 系統屬於誰？
+                    </h4>
+                    <p class="text-gray-400 ml-8">
+                        <strong>完全屬於您 (100% Ownership)。</strong><br>
+                        不同於 SaaS 軟體每月收費卻不給源碼，我們交付的是「資產」。從第一天起，所有的工作流 (Workflows)、代碼 (Code)
+                        與資料庫權限，全部歸您所有。即便未來不合作，系統依然是您的。
+                    </p>
+                </div>
+
+                <!-- Q2 -->
+                <div class="bg-gray-800/50 rounded-xl p-6 border border-gray-700">
+                    <h4 class="text-white font-bold text-lg mb-2 flex items-center">
+                        <span class="text-liyon-gold mr-3">Q.</span>
+                        我需要準備什麼技術團隊嗎？
+                    </h4>
+                    <p class="text-gray-400 ml-8">
+                        <strong>完全不需要。</strong><br>
+                        Liyon Global 就是您的虛擬技術長 (Fractional CTO)。我們會處理所有的 API 串接、伺服器架設與除錯。您只需要專注於您的核心業務與策略。
+                    </p>
+                </div>
+
+                <!-- Q3 -->
+                <div class="bg-gray-800/50 rounded-xl p-6 border border-gray-700">
+                    <h4 class="text-white font-bold text-lg mb-2 flex items-center">
+                        <span class="text-liyon-gold mr-3">Q.</span>
+                        你們接受什麼樣的客戶？
+                    </h4>
+                    <p class="text-gray-400 ml-8">
+                        為了確保服務品質與深度，我們採用<strong>「限量招募制」</strong>。<br>
+                        我們每月僅接受 <strong>3 組</strong> 新客戶進行深度診斷與建置。我們尋找的是準備好擴張 (Scale)、且願意相信數據與自動化力量的創辦人。
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 7. Grand Slam Offer (Footer CTA) -->
     <section id="contact" class="py-20 bg-liyon-gold/10 relative overflow-hidden">
         <div class="absolute inset-0 bg-liyon-navy/90 backdrop-blur-sm z-0"></div>
         <div class="max-w-4xl mx-auto px-6 text-center relative z-10">
@@ -505,6 +625,30 @@
                 <h4 class="text-white font-bold text-lg">LIYON <span class="text-liyon-gold">Global</span></h4>
                 <p class="text-gray-400 text-sm mt-2">LIYON Global Enterprise Co., Ltd.<br>立盈國際興業股份有限公司</p>
                 <p class="text-gray-500 text-xs mt-1">統編：60355352</p>
+
+                <!-- Social Links -->
+                <div class="flex space-x-4 mt-4">
+                    <!-- LinkedIn -->
+                    <a href="https://www.linkedin.com/in/theone-lin/" target="_blank"
+                        class="text-gray-400 hover:text-liyon-gold transition-colors">
+                        <span class="sr-only">LinkedIn</span>
+                        <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                    <!-- YouTube -->
+                    <a href="https://www.youtube.com/@TheoneAIchain" target="_blank"
+                        class="text-gray-400 hover:text-liyon-gold transition-colors">
+                        <span class="sr-only">YouTube</span>
+                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
             </div>
 
             <div class="md:w-1/3">
@@ -529,6 +673,8 @@
         <div
             class="max-w-7xl mx-auto px-6 mt-10 pt-6 border-t border-gray-900 text-center text-gray-600 text-xs flex flex-col md:flex-row justify-between items-center">
             <span>&copy; 2026 LIYON Global. All Rights Reserved.</span>
+            <span class="md:ml-auto md:mr-4"><a href="privacy.html"
+                    class="hover:text-liyon-gold transition-colors">Privacy & Terms</a></span>
             <span>Designed with Intelligence. Rooted in Truth.</span>
         </div>
     </footer>
