--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
             </div>
 
             <p class="mt-6 text-sm text-liyon-gold/80 font-medium tracking-wide animate-pulse">
-                ✨ 限時免費診斷，價值 $500 USD
+                <span class="lang-zh">✨ 限時免費診斷，價值 $500 USD</span>
+                <span class="lang-en">✨ Limited Free Diagnosis (Value: $500 USD)</span>
             </p>
 
             <!-- Tech Stack Trust Bar -->
@@ -354,31 +355,54 @@
             <!-- Right Content -->
             <div>
                 <h2 class="text-3xl md:text-4xl font-bold mb-8 leading-snug text-white">
-                    Rooted in <span class="text-liyon-gold">Truth</span>,<br>
-                    Overflowing with <span class="text-liyon-gold">Grace</span>.
+                    <span class="lang-zh">
+                        立定技術根基，<br>
+                        坐擁豐盛盈餘。
+                    </span>
+                    <span class="lang-en">
+                        Rooted in <span class="text-liyon-gold">Truth</span>,<br>
+                        Overflowing with <span class="text-liyon-gold">Grace</span>.
+                    </span>
                 </h2>
-                <h3 class="text-xl text-liyon-gold mb-6 font-medium">立定技術根基，坐擁豐盛盈餘。</h3>
                 <div class="space-y-6 text-gray-400 leading-relaxed">
                     <p>
-                        在 2026 年的 AI 巨浪中，大多數人仍受困於「高營收、低利潤」的勞動陷阱。
-                        LIYON 立盈國際相信，真正的商業自由，來自於對 <strong class="text-white">利潤率 (Margin)</strong> 與 <strong
-                            class="text-white">槓桿 (Leverage)</strong> 的極致追求。
+                        <span class="lang-zh">在 2026 年的 AI 巨浪中，大多數人仍受困於「高營收、低利潤」的勞動陷阱。
+                            LIYON 立盈國際相信，真正的商業自由，來自於對 <strong class="text-white">利潤率 (Margin)</strong> 與 <strong
+                                class="text-white">槓桿 (Leverage)</strong> 的極致追求。</span>
+                        <span class="lang-en">In the AI wave of 2026, most occupy the "High Revenue, Low Profit" labor
+                            trap.
+                            LIYON Global believes that true business freedom comes from the extreme pursuit of <strong
+                                class="text-white">Margin</strong> and <strong
+                                class="text-white">Leverage</strong>.</span>
                     </p>
                     <ul class="space-y-4 mt-6">
                         <li class="flex items-start">
                             <span class="text-liyon-gold mr-3 mt-1">✦</span>
-                            <span><strong class="text-white">Truth (真理)：</strong> 數據不會說謊。我們拒絕憑感覺決策，只相信經過市場驗證的自動化數據與
-                                ROI。</span>
+                            <span>
+                                <strong class="text-white"><span class="lang-zh">Truth (真理)：</span><span
+                                        class="lang-en">Truth:</span></strong>
+                                <span class="lang-zh">數據不會說謊。我們拒絕憑感覺決策，只相信經過市場驗證的自動化數據與 ROI。</span>
+                                <span class="lang-en">Data doesn't lie. We reject gut feelings and trust only
+                                    market-validated automation data and ROI.</span>
+                            </span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-liyon-gold mr-3 mt-1">✦</span>
-                            <span><strong class="text-white">Grace (恩典)：</strong> 當你將重複性勞動交給
-                                AI，你將獲得「時間的恩典」。這份盈餘，讓你專注於創造不可複製的聲譽資本。</span>
+                            <span>
+                                <strong class="text-white"><span class="lang-zh">Grace (恩典)：</span><span
+                                        class="lang-en">Grace:</span></strong>
+                                <span class="lang-zh">當你將重複性勞動交給 AI，你將獲得「時間的恩典」。這份盈餘，讓你專注於創造不可複製的聲譽資本。</span>
+                                <span class="lang-en">When you delegate repetitive labor to AI, you receive the "Grace
+                                    of Time." This surplus allows you to focus on building irreplaceable reputational
+                                    capital.</span>
+                            </span>
                         </li>
                     </ul>
                     <p class="mt-8 pt-8 border-t border-gray-800 text-sm font-mono text-liyon-gold">
                         // We are not vendors. We are your Chief Automation Officers.<br>
-                        我們不交付「軟體」，我們交付「每天為你省下 3 小時」的系統。
+                        <span class="lang-zh">我們不交付「軟體」，我們交付「每天為你省下 3 小時」的系統。</span>
+                        <span class="lang-en">We don't deliver "software"; we deliver a system that "saves you 3 hours a
+                            day."</span>
                     </p>
                 </div>
             </div>
