--- a/index.html
+++ b/index.html
@@ -909,20 +909,27 @@
             </div>
 
             <div class="md:w-1/3">
-                <h5 class="text-white font-bold mb-3">Contact Us</h5>
+                <h5 class="text-white font-bold mb-3">
+                    <span class="lang-zh">聯絡資訊</span>
+                    <span class="lang-en">Contact Us</span>
+                </h5>
                 <ul class="text-gray-400 text-sm space-y-1">
-                    <li><strong>Tel:</strong> 03-3558665 #103</li>
-                    <li><strong>Fax:</strong> 03-3558685</li>
-                    <li><strong>Email:</strong> liyon.global@gmail.com</li>
+                    <li><strong class="lang-zh">電話：</strong><strong class="lang-en">Tel:</strong> 03-3558665 #103</li>
+                    <li><strong class="lang-zh">傳真：</strong><strong class="lang-en">Fax:</strong> 03-3558685</li>
+                    <li><strong class="lang-zh">信箱：</strong><strong class="lang-en">Email:</strong>
+                        liyon.global@gmail.com</li>
                 </ul>
             </div>
 
             <div class="md:w-1/3">
-                <h5 class="text-white font-bold mb-3">Location</h5>
+                <h5 class="text-white font-bold mb-3">
+                    <span class="lang-zh">公司地址</span>
+                    <span class="lang-en">Location</span>
+                </h5>
                 <p class="text-gray-400 text-sm">
-                    <strong>Address:</strong><br>
-                    15F.-1, No. 11, Jingguo Rd., Taoyuan Dist., Taoyuan City 330, Taiwan (R.O.C.)<br>
-                    <span class="text-xs text-gray-500 mt-1 block">330 桃園市桃園區經國路11號15樓之1</span>
+                    <span class="lang-zh"><strong>地址：</strong><br>330 桃園市桃園區經國路11號15樓之1 (R.O.C.)</span>
+                    <span class="lang-en"><strong>Address:</strong><br>15F.-1, No. 11, Jingguo Rd., Taoyuan Dist.,
+                        Taoyuan City 330, Taiwan (R.O.C.)</span>
                 </p>
             </div>
         </div>
@@ -930,9 +937,16 @@
         <div
             class="max-w-7xl mx-auto px-6 mt-10 pt-6 border-t border-gray-900 text-center text-gray-600 text-xs flex flex-col md:flex-row justify-between items-center">
             <span>&copy; 2026 LIYON Global. All Rights Reserved.</span>
-            <span class="md:ml-auto md:mr-4"><a href="privacy.html"
-                    class="hover:text-liyon-gold transition-colors">Privacy & Terms</a></span>
-            <span>Designed with Intelligence. Rooted in Truth.</span>
+            <span class="md:ml-auto md:mr-4">
+                <a href="privacy.html" class="hover:text-liyon-gold transition-colors">
+                    <span class="lang-zh">隱私權保護與服務條款</span>
+                    <span class="lang-en">Privacy & Terms</span>
+                </a>
+            </span>
+            <span>
+                <span class="lang-zh">智者造勢，順勢而為。</span>
+                <span class="lang-en">Designed with Intelligence. Rooted in Truth.</span>
+            </span>
         </div>
     </footer>
 
